fixed button and title issue on smaller screens, added to footer

--- a/less/about2.less
+++ b/less/about2.less
@@ -52,11 +52,18 @@
       @media (max-width: 900px) {
         font-size: 2rem;
       }
+      @media (max-width: 420px){
+        font-size: 1.8rem;
+      }
     } //end h2
     img {
       width: 30%;
       @media (max-width: 900px) {
         width: 40%;
+      }
+      @media (max-width: 420px){
+        width: 55%;
+        margin-top: 4%;
       }
     }
   } //end teamTitle
@@ -65,7 +72,6 @@
     .flexH (space-around, center);
     margin: 5% 0;
     width: 100%;
-    // z-index: 1;
 
     @media (max-width: 900px) {
       .flexV (center, center);
