--- a/less/home.less
+++ b/less/home.less
@@ -326,6 +326,10 @@
         width: 20%;
       }
 
+      @media (max-width: 420px){
+        width: 25%;
+      }
+
       &:hover {
         background-color: white;
       } //end bottomBtn hover
